<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/activityMainBottomNavigationMenu_home_tab"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/bottomNavigationMenu_home"/>

    <item
        android:id="@+id/activityMainBottomNavigationMenu_starred_tab"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_star_border_24"
        android:title="@string/bottomNavigationMenu_starred"/>
</menu>