...
    <string name="generic_saved">Saved</string>
    <string name="generic_switch">Switch</string>
    <string name="generic_darken_mode_tooltip">Darken mode</string>
    <string name="generic_lighten_mode_tooltip">Lighten mode</string>

    <!--Non-translatable strings-->
    <string name="app_name" translatable="false">PixaPencil</string>
    <string name="generic_png" translatable="false">PNG</string>
    <string name="generic_jpg" translatable="false">JPG</string>
    <string name="generic_webp" translatable="false">WEBP</string>
    <string name="generic_tif" translatable="false">TIF</string>
    <string name="generic_bmp" translatable="false">BMP</string>
    <string name="fragmentAppInfo_placeholder_version_number" translatable="false">X.X.X</string>
...
    <string name="fragmentNewProject_name">Name</string>
    <string name="fragmentNewProject_width">Width</string>
    <string name="fragmentNewProject_height">Height</string>

    <string name="fragment_find_and_replace_find_preview_content_description">Find Preview</string>
    <string name="fragment_find_and_replace_replace_preview_content_description">Replace Preview</string>
    <string name="fragment_new_project_title">New Project</string>
    <string name="fragment_replace_color_title">Replace Color</string>
    <string name="fragment_color_picker_title">Select Color</string>
    <string name="fragment_new_color_palette_title">New Color Palette</string>
    <string name="fragment_spray_tool_settings_title">Spray Tool Settings</string>
    <string name="fragment_dither_tool_settings_title">Dither Tool Settings</string>

...
